--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 					<img src="image/Banner3.jpg" class="d-block w-100" alt="Bunthoeun">
 				  </div>
 				  <div class="carousel-item">
-					<img src="image/banner.jpg" class="d-block w-100" alt="Desk">
+					<img src="image/Banner4.jpg" class="d-block w-100" alt="Desk">
 				  </div>
 				  <div class="carousel-item">
-					<img src="image/education.jpg" class="d-block w-100" alt="Book">
+					<img src="image/Banner5.jpg" class="d-block w-100" alt="Book">
 				  </div>
 				  <div class="carousel-item">
-					<img src="image/programming.png" class="d-block w-100" alt="Language">
+					<img src="image/Banner6.jpg" class="d-block w-100" alt="Language">
 				  </div>
 				</div>
 				<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -65,7 +65,7 @@
 			<div class="name text-center">
 				<h1>WELCOME</h1>
 				<h2>TO</h2>
-				<h1>Mr. VORN BUNTHOEUN</h1>
+				<h1>VORN BUNTHOEUN</h1>
 			</div>
 		</div>
 	</section>
