Update MyInfor and Maps

--- a/index.html
+++ b/index.html
@@ -85,24 +85,23 @@
 							<td>BUNTHOEUN VORN</td>
 						</tr>
 						<tr>
-							<th>Nationality:</th>
-							<td>Khmer</td>
+							<th>Position:</th>
+							<td>Web Developer</td>
 						</tr>
 						<tr>
-							<th>Gender:</th>
-							<td>Male</td>
+							<th>Nationality:</th>
+							<td>Khmer</td>
 						</tr>
 						<tr>
 							<th>E-mail:</th>
 							<td>Bunthoeunvorn010@gmail.com</td>
 						</tr>
 						<tr>
-							<th>Address:</th>
-							<td>#70B, st.36 Sony, TikTla, SenSok, PhnomPenh, Cambodia</td>
-						</tr>
-						<tr>
 							<th>Description:</th>
-							<td>Web Developer with 2 years experiences on multiple global ERP systems and solutions at SUNFIX Consulting co, ltd and NEXVIS Solution co, ltd skill with ASP.Net Core and Framework.</td>
+							<td class="description text-justify">Web Developer with 2 years experiences on multiple global ERP 
+								systems and solutions at SUNFIX Consulting co, ltd and NEXVIS Solution co, ltd skill with ASP.Net 
+								Core and Framework.
+							</td>
 						</tr>
 					</table>
 				</div>
@@ -243,7 +242,7 @@
 					<h1>Quick Contact</h1>
 					<p><i class="fa fa-phone-square"></i>	(+855)10 335 457</p>
 					<p><i class="fa fa-envelope"></i>	Bunthoeunvorn010@gmail.com</p>
-					<p><i class="fa fa-home"></i>	<a href="https://www.google.com/maps/place/11%C2%B034'21.0%22N+104%C2%B053'56.9%22E/@11.572504,104.8985785,19z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d11.5725039!4d104.8991274">Phnom Penh City, Cambodia</a></p>
+					<p><i class="fa fa-home"></i>	<a href="https://www.google.com/maps/place/11%C2%B033'55.6%22N+104%C2%B052'22.2%22E/@11.5565428,104.871735,15z/data=!4m6!3m5!1s0x310951be5ed23457:0x3849937aa7a8c05f!7e2!8m2!3d11.5654422!4d104.8728436">Phnom Penh City, Cambodia</a></p>
 				</div>
 
 				<div class="col-md-3">
