--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Back-End Web Developer.</h3>
+            <h3>Web Developer.</h3>
             <p class="fst-italic">
-              I am currently position as Back-End Web Developer with some experiences of the ERP software, C#, Asp.net (Core & Framework), MsSQL and another technologies related. 
+              I am currently position as Web Developer with some experiences of the ERP software, C#, Asp.net (Core & Framework), MsSQL and another technologies related. 
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -107,7 +107,7 @@
                   
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Computer Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Bunthoeunvorn010@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://bunthoeunvorn.github.io">https://bunthoeunvorn.github.io</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>CV:</strong> <span><a href="/assets/myinfo/CV-READONLY.pdf" download>Click to download my CV.</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Not Available</span></li>
                 </ul>
               </div>
@@ -202,9 +202,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">APIs <i class="val">80%</i></span>
+              <span class="skill">APIs <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -295,7 +295,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experiences</h3>
             <div class="resume-item">
-              <h4>Back-End Web Developer</h4>
+              <h4>Web Developer</h4>
               <h5>2019 - Present</h5>
               <p><em>SUNFIX Consulting co., ltd, Phnom Penh, Cambodia</em></p>
               <ul>
