--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span><script>document.write(new Date().getFullYear() - 1998)</script></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Nationality:</strong> <span>Khmer</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Phnom Penh, Cambodia</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+855) 10 33 54 57 / 71 31 71 789</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+855) 10 33 54 57</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -177,7 +177,7 @@
           <h3>Professional Skills</h3>
           <div class="col-lg-6" data-aos="fade-up">
             <div class="progress">
-              <span class="skill">ERP Software <i class="val">70%</i></span>
+              <span class="skill">ERP Software <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -191,7 +191,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MsSQL / MySQL <i class="val">75%</i></span>
+              <span class="skill">MsSQL / MySQL <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -202,21 +202,21 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">APIs <i class="val">70%</i></span>
+              <span class="skill">API <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">80%</i></span>
+              <span class="skill">JavaScript <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Digital Maps <i class="val">90%</i></span>
+              <span class="skill">Digital Maps <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -226,16 +226,16 @@
           <h3>Personal Skills</h3>
             <div class="col-lg-6" data-aos="fade-up">
               <div class="progress">
-                <span class="skill">Analytical <i class="val">75%</i></span>
+                <span class="skill">Analytical <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
   
               <div class="progress">
-                <span class="skill">Teamwork <i class="val">90%</i></span>
+                <span class="skill">Teamwork <i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
             </div>
@@ -247,9 +247,9 @@
                 </div>
               </div>
               <div class="progress">
-                <span class="skill">Open-Minded<i class="val">80%</i></span>
+                <span class="skill">Open-Minded<i class="val">100%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
             </div>
