Update interest, skill and phone number.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span><script>document.write(new Date().getFullYear() - 1998)</script></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Nationality:</strong> <span>Khmer</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Phnom Penh, Cambodia</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+855) 10 33 54 57</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(+855) 10 335 457</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -108,7 +108,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Computer Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Bunthoeunvorn010@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>CV:</strong> <span><a href="/assets/myinfo/CV-READONLY.pdf" download>Click to download my CV.</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Not Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telegram:</strong> <span>(+855) 10 335 457</span></li>
                 </ul>
               </div>
             </div>
@@ -137,7 +137,7 @@
           <div class="col-lg-4 col-md-4 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-pc-display"></i>
-              <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="75" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Technologies</strong></p>
             </div>
           </div>
@@ -145,7 +145,7 @@
           <div class="col-lg-4 col-md-4 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-music-note-list"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Musical</strong></p>
             </div>
           </div>
@@ -153,7 +153,7 @@
           <div class="col-lg-4 col-md-4 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-signpost-2-fill"></i>
-              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Traveling</strong></p>
             </div>
           </div>
@@ -179,7 +179,7 @@
             <div class="progress">
               <span class="skill">ERP Software <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -193,7 +193,7 @@
             <div class="progress">
               <span class="skill">MsSQL / MySQL <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -202,23 +202,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">API <i class="val">70%</i></span>
+              <span class="skill">API <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">JavaScript <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Digital Maps <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -241,9 +241,9 @@
             </div>
             <div class="col-lg-6" data-aos="fade-up">
               <div class="progress">
-                <span class="skill">Positive Thinking <i class="val">85%</i></span>
+                <span class="skill">Positive Thinking <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
               <div class="progress">
@@ -269,16 +269,13 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Bunthoeun Vorn</h4>
-              <p><em>Hard working and effective web developer experienced with world-wide ERP software on developing, customizing and 
-                analyzing of the project solution. Teamwork building, discussing and managing of project scope. Seeking a developer 
-                position where a strong understanding of technology and a marketing background can be best utilized.</em></p>
-  
-            </div>
-
             <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Construction and Sales-Contract</h4>
+              <h5>2022</h5>
+              <p><em>SUNFIX Consulting co., ltd, Phnom Penh, Cambodia</em></p>
+              <p>Has successfully participated to learn within Construction and Sales-Contract courses.</p>
+            </div>
             <div class="resume-item">
               <h4>Bachelor Degree of Computer Science</h4>
               <h5>2016 - 2020</h5>
@@ -299,7 +296,9 @@
               <h5>2019 - Present</h5>
               <p><em>SUNFIX Consulting co., ltd, Phnom Penh, Cambodia</em></p>
               <ul>
-                <li>Understanding ERP software and process business.</li>
+                <li>Understanding ERP software and general business process.</li>
+                <li>Joint many local and oversea projects to develop and customize by customer requirements.</li>
+                <li>Joint R&D to work with senior and management team on the duty of research and develop within our own products.</li>
                 <li>Built reusable code that could be utilized in other projects.</li>
                 <li>Contributed to back-end experience and collaborated on APIs.</li>
                 <li>Handled special projects designated by senior developer.</li>
@@ -421,7 +420,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>(+855)10335457 / 713171789</p>
+                <p>(+855) 10 335 457</p>
               </div>
 
               <!-- <iframe src="https://www.google.com/maps/place/Borei+Tuk+Thla+Market/@11.5617127,104.8705727,16.37z/data=!4m8!1m2!3m1!2sBorei+Tuk+Thla+Market!3m4!1s0x310951be88d58911:0xbeb479a90d8a322a!8m2!3d11.5648653!4d104.8736797" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
