--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
               </div>
             </div>
             <p>
-              Hard working and effective web developer experienced with world-wide ERP software on developing, customizing and 
+              Hard working and effective web developer experienced with ESB IBM ACE and the world-wide ERP software on developing, customizing and 
               analyzing of the project solution. Teamwork building, discussing and managing of project scope. Seeking a developer 
-              position where a strong understanding of technology and a marketing background can be best utilized.
+              position where a strong understanding of technology, financial and a marketing background can be best utilized.
             </p>
           </div>
         </div>
@@ -129,7 +129,7 @@
 
         <div class="section-title">
           <h2>Interests</h2>
-          <p>By excluding working time, I am having naturally hobbies such as playing music and traveling in local eco-tourism resort. Farthermore, I am Interested in practising with techologies (Programming language, AI, Robots, IOT)</p>
+          <p>By excluding working time, I am having naturally hobbies such as technologies researching, playing music and traveling in local eco-tourism resort. Farthermore, I am interested in practising with techologies (Programming language, AI, Robots, IOT)</p>
         </div>
 
         <div class="row no-gutters">
@@ -169,7 +169,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Here below shows about my professional and personal skills related to my 3 years experiences of a full-time web developer.</p>
+          <p>Here below shows about my professional and personal skills related to my 5 years of the experiences as a full-time web developer and ESB development.</p>
         </div>
 
         <div class="row skills-content">
@@ -200,18 +200,24 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+							<div class="progress">
+              <span class="skill">ESB Development <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
             <div class="progress">
               <span class="skill">API <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">JavaScript <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -228,7 +234,7 @@
               <div class="progress">
                 <span class="skill">Analytical <i class="val">70%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
   
@@ -243,7 +249,7 @@
               <div class="progress">
                 <span class="skill">Positive Thinking <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
               <div class="progress">
